--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.djrapitops</groupId>
-    <artifactId>Extension-template</artifactId>
+    <artifactId>Extension-Heroes</artifactId>
     <version>R0.1</version>
     <build>
         <plugins>
